# NovaML

./: CMakeLists.txt  Makefile  README.md
include/NovaML/Core/: Core.hpp  tensor.hpp  tensor_ops.hpp
include/NovaML/Core/Activation/: relu.hpp  relu.tpp  sigmoid.hpp  sigmoid.tpp
include/NovaML/Core/Layer/: dense.hpp  dense.tpp
include/NovaML/Core/Loss/: mse.hpp  mse.tpp
include/NovaML/Core/Module/: module.hpp  module.tpp  sequential.hpp  sequential.tpp
include/NovaML/Core/Tensor/: autograd.hpp  tensor.hpp  tensor.tpp  tensor_math.hpp  tensor_ops.hpp  utils.hpp
include/mldl/: activation.hpp  activation_impl.hpp  factory.hpp  layer.hpp  layer_impl.hpp  loss.hpp  loss_impl.hpp  model.hpp  model_impl.hpp  tensor.hpp  tensor_impl.hpp
include/mldl/core/: module.hpp  module_impl.tpp  tensor.hpp
include/mldl/layers/: dense.hpp  dense_impl.tpp  relu.hpp  relu_impl.hpp  sigmoid.hpp  sigmoid_impl.tpp
include/mldl/losses/: loss.hpp  mse.hpp  mse_loss.tpp
include/mldl/modules/: sequential.hpp  sequential_impl.tpp
notebooks/: main.ipynb
src/: main.cpp
tests/: test_backward_propargation.cpp  test_forward_propargation.cpp  test_tensor_math.cpp  test_tensor_operation.cpp  test_tensor_scalar.cpp
